maze.lessons.maze.island.IslandMaze.scala.error
Escaper:16: error: not found: value estFacemur
  if(estFacemur())
     ^